--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'application'
     id 'org.jetbrains.kotlin.jvm' version '1.5.0'
+    id 'org.jetbrains.kotlin.plugin.serialization' version "$kotlin_version"
 }
 
 group "com.book.recipe"
@@ -12,8 +13,23 @@ repositories {
 }
 
 dependencies {
+    // Ktor
     implementation "io.ktor:ktor-server-core:$ktor_version"
     implementation "io.ktor:ktor-server-netty:$ktor_version"
+    implementation "io.ktor:ktor-client-core:$ktor_version"
+    implementation "io.ktor:ktor-serialization:$ktor_version"
     implementation "ch.qos.logback:logback-classic:$logback_version"
+
+    // DI
+    implementation "io.insert-koin:koin-ktor:$koin_version"
+
+    // Exposed
+    implementation "org.jetbrains.exposed:exposed-core:$exposed_version"
+    implementation "org.jetbrains.exposed:exposed-dao:$exposed_version"
+    implementation "org.jetbrains.exposed:exposed-jdbc:$exposed_version"
+
+    // H2
+    implementation "com.h2database:h2:1.4.200"
+
     testImplementation "io.ktor:ktor-server-tests:$ktor_version"
 }
