--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,5 @@ ktor_version=1.5.4
 kotlin_version=1.5.0
 logback_version=1.2.3
 kotlin.code.style=official
+exposed_version=0.31.1
+koin_version=3.0.1
